Adding classes from gui now works
todo, add verifications
no-such file must be fatal.